src/css/exerciseList.css
.Preference {
    font-family: Inter,sans-serif;
    align-items: center;
    align-content: center;
}

.saveWrapper {
    position: relative;
    padding: 14px 40px;
}

.saveWorkoutButton {
    margin: 0;
    position: relative;
    top:50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, 50%);
    padding: 14px 40px;
    background-color: #fee6e3;
    border: 2px transparent #000000;
    border-radius: 8px;
    box-sizing: border-box;
    color: #000000;
    cursor: pointer;
    font-family: Inter,sans-serif;
    font-size: 16px;
    height: 48px;
    justify-content: center;
    line-height: 24px;
    max-width: 100%;
}



.saveWorkoutButton:active {
    background-color: #ffdeda;
    outline: 0;
}

.saveWorkoutButton:hover {
    outline: 0;
}

@media (min-width: 768px) {
    .saveWorkoutButton {
    padding: 0 40px;
    }
}

